--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +12,44 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+table {
+  margin-bottom: 15px;
+}
+
+td, tr {
+  width: 50px;
+  height: 50px;
+  color: white;
+}
+
+.color-selection-container {
+  text-align: left;
+}
+
+.color-selection-container .color-selection-title {
+  margin-bottom: 15px;
+}
+
+.color-container {}
+
+.btn {
+  width: 50px;
+  height: 50px;
+  border: none;
+}
+
+.reset {
+  background-color: #000000;
+}
+
+.button1 {
+  background-color: coral;
+}
+
+.button2 {
+  background-color: gray;
+}
+
+.btn:focus {
+  border: 2px solid yellow;
 }
